--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
         <div class="choice" id="B" onclick="checkAnswer('B')"></div>
 
         <div class="choice" id="C" onclick="checkAnswer('C')"></div>
-        
+
     <div id="timer">
         <div id="counter">
                     <div id="choices">
+                        <div id="scoreContainer" style="display: none">
+                        </div>
 
                     </div>
                 </div>
