--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="reset.css">
 
-</head>
-
 <body>
+<div id="container">
+
 <div id="start"> Start Quiz! </div>
 <div id="quiz" style= "display: none;">
     <div id="question"> <p>Question</p> </div>
