--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     
 </head>
 <body>
+    <div id="timer">
     <h2 id="test_status"></h2>
-    <div id="test">Start Quiz</div>
-    
+    <div id="test"></div>
+
     <script src="questions.js"></script>
 </body>
 </html>
