--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div id="timer">
     <h2 id="test_status"></h2>
     <div id="test"></div>
+    <div id="count">Start</div>
 
     <script src="questions.js"></script>
 </body>
