editing file path

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 
     <title>Quiz</title>
 
-    <link rel="stylesheet" link="style.css">
-    <link rel="stylesheet" link="reset.css"></rel>
+    <link rel="stylesheet" link="/Users/pechandavon/Desktop/Homework/quiz/style.css">
+    <link rel="stylesheet" link="/Users/pechandavon/Desktop/Homework/quiz/questions.js"></rel>
+    <link rel="stylesheet" link="/Users/pechandavon/Desktop/Homework/quiz/reset.css">
     
    
     
